syntax = 'proto3';

package astria.mempool.v1alpha1;

// `RemovalCache` is a resource which represents the removal cache of the Astria
// Sequencer's mempool. The removal cache is a collection of transactions which
// have been removed from the mempool either due to failing `CheckTx` or being
// included in a block.
message RemovalCache {
    // The transactions removed from the mempool and their removal reasons.
    repeated Removal inner = 1;
}

// Represents a transaction hash and its reason for removal from the mempool.
message Removal {
    // The hash of the transaction which has been removed from the mempool.
    bytes tx_hash = 1;
    // The reason for the transaction's removal from the mempool.
    string reason = 2;
}
